# cpp_template_project

./: CMakeLists.txt  LICENSE  conanfile.txt  config.toml  main.cpp  profile
app/: CMakeLists.txt  main.cpp
app/inc/: configparser.hpp  server.hpp  utils.hpp
app/src/: client.cpp  configparser.cpp  server.cpp  utils.cpp
inc/: client.hpp
proto/: CMakeLists.txt  message.proto
src/: client.cpp  server.cpp
unittests/app/: CMakeLists.txt  utils_test.cpp
